--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@mindinventory/react-native-stagger-view": "file:../mindinventory-react-native-stagger-view-1.0.0.tgz",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.2",
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
