fix(staggered): minor changes

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "type": "git",
     "url": "https://github.com/Mindinventory/react-native-stagger-view.git"
   },
-  "author": "harshinventory <harsh.parmar@mindinventory.com> (https://github.com/harshinventory)",
+  "author": "Mindinventory",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mindinventory/react-native-stagger-view/issues"
